test. API, tests, and OpenAPI for notes/tags
- implement test case for notes/tags api routes and pass test case.

- install dev dependencies (e.g.: sqlite3 to mock database in memory)

- revise error description in jsdoc in api route(use next-auth's getSession to check if user pass auth, instead of Bearer token in the header)
